<resources>
    <string name="app_name">Projekt Thomas Heinrich</string>
    <string name="benutzername">Benutzername</string>
    <string name="passwort">Passwort</string>
    <string name="anmelden">Anmelden</string>
    <string name="start_game">Start Game</string>
    <string name="highscores">Highscores</string>
    <string name="settings">Settings</string>
    <string name="about_game">About Game</string>
    <string name="my_game">"My Game"</string>
    <string name="start_coming">"Coming Soon..."</string>
    <string name="login">Login</string>
    <string name="benutzername_ndern">Benutzername ändern</string>
    <string name="confirm">Confirm</string>
    <string name="hallo">hallo</string>
    <string name="spielername">Spielername</string>
    <string name="name">name</string>
    <string name="level">Level</string>
    <string name="lvl">lvl</string>
    <string name="punkte">Punkte</string>
    <string name="points">points</string>
</resources>